# hw

./: .gitignore  .hgeol  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  COPYING  COPYING.txt  CREDITS  ChangeLog.txt  Fonts_LICENSE.txt  INSTALL  INSTALL.md  README  README.md  README.txt  README_WINDOWS  hedgewars.kdevelop  overallnotices.txt
QTfrontend/: AbstractPage.cpp  AbstractPage.h  AutoUpdater.h  CMakeLists.txt  CocoaInitializer.h  CocoaInitializer.mm  Doxyfile  HWApplication.cpp  HWApplication.h  InstallController.cpp  InstallController.h  KB.h  M3InstallController.h  M3InstallController.m  M3Panel.h  M3Panel.mm  NSWorkspace_RBAdditions.h  NSWorkspace_RBAdditions.m  QTfrontend.pro  SDLs.cpp  SDLs.h  SparkleAutoUpdater.h  SparkleAutoUpdater.mm  SquareLabel.cpp  SquareLabel.h  about.cpp  about.h  achievements.cpp  achievements.h  ammoSchemeModel.cpp  ammoSchemeModel.h  bgwidget.cpp  bgwidget.h  binds.cpp  binds.h  campaign.cpp  campaign.h  chatwidget.cpp  chatwidget.h  databrowser.cpp  (+154 more)
QTfrontend/model/: GameStyleModel.cpp  GameStyleModel.h  HatModel.cpp  HatModel.h  MapModel.cpp  MapModel.h  ThemeFilterProxyModel.cpp  ThemeFilterProxyModel.h  ThemeModel.cpp  ThemeModel.h  ammoSchemeModel.cpp  ammoSchemeModel.h  gameSchemeModel.cpp  gameSchemeModel.h  hats.cpp  hats.h  netserverslist.cpp  netserverslist.h  playerslistmodel.cpp  playerslistmodel.h  roomslistmodel.cpp  roomslistmodel.h  themesmodel.h
QTfrontend/net/: hwmap.cpp  hwmap.h  hwmapoptimizer.cpp  hwmapoptimizer.h  netregister.cpp  netregister.h  netserver.cpp  netserver.h  netudpserver.cpp  netudpserver.h  netudpwidget.cpp  netudpwidget.h  newnetclient.cpp  newnetclient.h  proto.cpp  proto.h  recorder.cpp  recorder.h  tcpBase.cpp  tcpBase.h
QTfrontend/res/: Challenges.xcf  btnAISurvival.xcf  credits.csv  hedgewars.rc
QTfrontend/translations/: hedgewars_ru.qm  hedgewars_ru.ts
QTfrontend/ui/: mouseoverfilter.cpp  mouseoverfilter.h  qaspectratiolayout.cpp  qaspectratiolayout.h
QTfrontend/util/: DataManager.cpp  DataManager.h  FileEngine.cpp  FileEngine.h  HWDataManager.cpp  HWDataManager.h  KeyMap.cpp  KeyMap.h  LibavInteraction.cpp  LibavInteraction.h  MessageDialog.cpp  MessageDialog.h  SDLInteraction.cpp  SDLInteraction.h  libav_iteraction.cpp  libav_iteraction.h  namegen.cpp  namegen.h
frontend-qt6/: .clang-format  CMakeLists.txt  HWApplication.cpp  HWApplication.h  achievements.cpp  achievements.h  binds.cpp  binds.h  campaign.cpp  campaign.h  drawmapscene.cpp  drawmapscene.h  game.cpp  game.h  gameuiconfig.cpp  gameuiconfig.h  hedgewars.rc  hwconsts.cpp  hwconsts.h  hwform.cpp  hwform.h  hwform_ui.cpp  hwform_ui.h  main.cpp  mission.cpp  mission.h  sdlkeys.cpp  team.cpp  team.h  weapons.h
frontend-qt6/model/: GameStyleModel.cpp  GameStyleModel.h  HatModel.cpp  HatModel.h  MapModel.cpp  MapModel.h  ThemeFilterProxyModel.cpp  ThemeFilterProxyModel.h  ThemeModel.cpp  ThemeModel.h  gameSchemeModel.cpp  gameSchemeModel.h  netserverslist.cpp  netserverslist.h  playerslistmodel.cpp  roomslistmodel.h  (+2 more)
gameServer/: Actions.hs  CMakeLists.txt  ClientIO.hs  CommandHelp.hs  ConfigFile.hs  Consts.hs  CoreTypes.hs  EngineInteraction.hs  FloodDetection.hs  HWProtoChecker.hs  HWProtoCore.hs  HWProtoInRoomState.hs  HWProtoLobbyState.hs  HWProtoNEState.hs  HandlerUtils.hs  JoinsMonitor.hs  NetRoutines.hs  Opts.hs  RoomsAndClients.hs  ServerCore.hs  ServerState.hs  Store.hs  Utils.hs  Votes.hs  hedgewars-server.cabal  hedgewars-server.hs  stresstest.hs  stresstest2.hs  stresstest3.hs
gameServer2/: Cargo.toml
hedgewars/: ArgParsers.inc  ArgParsers.pas  CCHandlers.inc  CMakeLists.txt  GL.h  GSHandlers.inc  GearDrawing.inc  HHHandlers.inc  Hedge.dpr  Hedge.res  LuaPas.pas  Makefile  PNGh.pas  PascalExports.pas  SDLMain.m  SDLh.pas  SinTable.inc  VGSHandlers.inc  adler32.pas  avwrapper.c  checksdl.dpr  config.inc.in  fConsts.pas  fGUI.pas  fGame.pas  fIPC.pas  fMisc.pas  fNet.pas  fOptionsGUI.pas  getdocumentpath.m  getrevnum.dpr  hw.dpr  hwLibrary.pas  hwengine.dpr  hwengine.pas  hwengine.rc  hwserv.dpr  jni.pas  options.inc  pas2c.h  (+97 more)
netserver/: CMakeLists.txt  HWProto.hs  Miscutils.hs  Opts.hs  hedgewars-server.hs  hwserv.hs  newhwserv.hs  stresstest.hs
openalbridge/: CMakeLists.txt  common.h  endianness.c  endianness.h  errlib.c  errlib.h  globals.h  loaders.c  loaders.h  oggvorbis.h  openalbridge.c  openalbridge.def  openalbridge.h  openalwrap.c  openalwrap.h  ssound.c  ssound.h  winstdint.h  wrappers.c  wrappers.h
qmlFrontend/: CMakeLists.txt  flib.h  hwengine.cpp  hwengine.h  main.cpp  previewimageprovider.cpp  previewimageprovider.h  qmlFrontend.pro  qmlFrontend.qrc  themeiconprovider.cpp  themeiconprovider.h
qmlfrontend/: CMakeLists.txt  Page1.qml  Page1Form.ui.qml  engine_instance.cpp  engine_instance.h  engine_interface.h  flib.h  game_config.cpp  game_config.h  game_view.cpp  game_view.h  gameconfig.cpp  gameconfig.h  gameview.cpp  gameview.h  hwengine.cpp  hwengine.h  main.cpp  main.qml  net_session.cpp  net_session.h  players_model.cpp  players_model.h  preview_acceptor.cpp  preview_acceptor.h  preview_image_provider.cpp  preview_image_provider.h  previewimageprovider.cpp  previewimageprovider.h  qml.qrc  rooms_model.cpp  rooms_model.h  runqueue.cpp  runqueue.h  team.cpp  team.h
share/: CMakeLists.txt  Info.plist.in  Makefile  dsa_pub.pem  hedgewars.appdata.xml  hwico.icns
tools/: CMakeLists.txt  CreateMacBundle.cmake.in  Main.hs  PascalBasics.hs  PascalParser.hs  PascalPreprocessor.hs  PascalUnitSyntaxTree.hs  README.md  build_vcpkg.bat  build_vcpkg_basic.bat  build_windows.bat  check_engine_locale_files.sh  check_lua_locale_files.lua  check_lua_locale_files.sh  check_translations.sh  cmake_uninstall.cmake.in  confuse.hs  create-dmg.sh  darkMagic.hs  dmg_pkg_install.sh  dmg_to_framework.sh  docgen.sh  find_outdated_engine_translations.sh  fix_fpc_ios_build_patch.diff  hashTest.hs  hwmap.hs  hwmap2lua.sh  pas2c.hs  protocolParser.hs  replay2hwd.hs  rgit2hg.sh  runhelper.dpr  unitCycles.hs  update_frontend_locale_files.sh  update_locale_files.sh  update_lua_locale_files.sh  w32DownloadUnzip.vbs
(+2534 files in other folders)
